# pigmentation-spot-detector

./: .env.example  .gitignore  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/core/: __init__.py  face_detector.py  models.py  skin_segmenter.py  spot_detector.py  vlm_validator.py
app/utils/: face_reconstruction_3dmm.py  head_mesh_enhanced.py  head_reconstruction.py  image_utils.py  mediapipe_mesh.py  visualization.py  visualization_3d.py  visualization_3d_textured.py
